--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,9 @@
         <li><a href="works.html">Works</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
-
 </div>
 
+<div id="pagecon">
 <div id="contentcontact">
 <h3>Name</h3>
 <p>Siim Raudsepp<p>
@@ -41,15 +41,14 @@
 <textarea id="Message" rows="6" cols="40">
 </textarea>
 <br>
-<input type="submit"></input>
-
+<input type="submit" id="Submit"></input>
 </form>
-
+</div>
 </div>
 
 <div id="footer">
 <hr>
-<address>Copyright 2006, Siimu Entertainment</address>
+<address>Copyright 2018, Siimu Entertainment</address>
 </div>
 </body>
 </html>
