Small changes in style and works.html links open in new window now and autoscrolling stops after pressing prev/next button

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 <textarea id="Message" rows="6" cols="40">
 </textarea>
 <br>
-<input type="submit" id="Submit"></input>
+<input type="submit" id="Submit" value="Saada"></input>
 </form>
 </div>
 </div>
