--- a/works.html
+++ b/works.html
@@ -20,7 +20,7 @@
 <div id="content" style="text-align:center">
 
 <h2 id="content_Workshead"></h2>
-<a id="projectLink" href="#"><img id="logo" src="" width="100" height="100"></img></a>
+<a id="projectLink" href="#" target="_blank"><img id="logo" src="" width="100" height="100"></img></a>
 <button id="prev" onclick="prev()">&laquo;</button>
 <button id="next" onclick="next()">&raquo;</button>
 </div>
